Bug 104573 - Assertion failed: SolarMutex not locked when trying to bring up File Open... dialog (debug build)
Summary: Assertion failed: SolarMutex not locked when trying to bring up File Open... ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-11 01:38 UTC by Aron Budea
Modified: 2016-12-21 14:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Call stack (6.01 KB, text/plain)
2016-12-11 06:12 UTC, Aron Budea
Details
Assertion dragging to StartCenter - call stack from VS (2.71 KB, text/plain)
2016-12-12 20:53 UTC, Mike Kaganski
Details
The second assertion after the first was said to "Break" (3.07 KB, text/plain)
2016-12-12 21:11 UTC, Mike Kaganski
Details
Assertion dragging to StartCenter - call stack from VS (8.58 KB, text/plain)
2016-12-12 21:36 UTC, Mike Kaganski
Details
The second assertion after the first was said to "Break" (9.05 KB, text/plain)
2016-12-12 21:36 UTC, Mike Kaganski
Details
Drag-n-Drop 3 (3.87 KB, text/plain)
2016-12-13 15:35 UTC, Mike Kaganski
Details
Drag-n-Drop 4 (4.96 KB, text/plain)
2016-12-13 15:36 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2016-12-11 01:38:24 UTC
Using an 5.4 master debug build (sources are from 2016-12-10) in Windows 7.

1. Open Start Center or an application, Writer for example.
2. Click Open File, open File -> Open... or select Open from the toolbar.

=> assertion failed: SolarMutex not locked.

Same with Save.

Version: 5.4.0.0.alpha0+
Build ID: 289124284f98bbea442871455cf7da5fe9ef3aae
CPU Threads: 4; OS Version: Windows 6.1; UI Render: GL; 
Locale: hu-HU (hu_HU); Calc: CL
Comment 2 Mike Kaganski 2016-12-11 01:59:24 UTC
Also asserts on dragging files to Start Center window
Comment 3 Aron Budea 2016-12-11 02:21:07 UTC
Let's add Noel to CC.
Comment 4 Noel Grandin 2016-12-11 05:06:15 UTC
could I get a backtrace(s) please?
Comment 5 Aron Budea 2016-12-11 06:12:49 UTC
Created attachment 129483 [details]
Call stack

I could only get a call stack from VS debugger, I hope it's helpful.
Comment 6 Commit Notification 2016-12-12 10:03:01 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71b1e3ff6374c23e65200d3bcafca387d29af04f

tdf#104573 - Assertion failed: SolarMutex not locked when trying

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Mike Kaganski 2016-12-12 20:53:49 UTC Comment hidden (obsolete)
Comment 8 Mike Kaganski 2016-12-12 21:11:30 UTC Comment hidden (obsolete)
Comment 9 Mike Kaganski 2016-12-12 21:36:03 UTC
Created attachment 129556 [details]
Assertion dragging to StartCenter - call stack from VS

Sorry, didn't notice that Only my code is not unchecked
Comment 10 Mike Kaganski 2016-12-12 21:36:37 UTC
Created attachment 129557 [details]
The second assertion after the first was said to "Break"
Comment 11 Commit Notification 2016-12-13 07:50:36 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f04ec99f5e6a543b8191ced61db4710c3c0de356

tdf#104573 - Assertion failed: SolarMutex not locked

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2016-12-13 09:42:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=722f4e1d86710f2facd37d7e040df9e1fd585e26

tdf#104573 - Assertion failed: SolarMutex not locked

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Mike Kaganski 2016-12-13 15:35:08 UTC
Created attachment 129593 [details]
Drag-n-Drop 3
Comment 14 Mike Kaganski 2016-12-13 15:36:12 UTC
Created attachment 129594 [details]
Drag-n-Drop 4

And now it's impossible to open the OpenFile dialog - an unhandled exception is thrown.
Comment 15 Noel Grandin 2016-12-13 18:21:18 UTC
The patch that started this and all of the follow on commits have all been reverted until I have time to do this better. Sorry for the noise.
Comment 16 Michael Meeks 2016-12-21 14:45:47 UTC
So can we close the bug Noel ? =)