tdf#104573 - Assertion failed: SolarMutex not locked when trying

to bring up File Open... dialog

we need to hold the SolarMutex when doing VclPtr ref-counting

Change-Id: I843f2a243acaf73db1f6557df23475fe5bb12131