vcl/source/window/event.cxx
@@ -652,6 +652,7 @@ void Window::ImplCallFocusChangeActivate( vcl::Window* pNewOverlapWindow,
 NotifyEvent::NotifyEvent( MouseNotifyEvent nEventType, vcl::Window* pWindow,
                           const void* pEvent )
 {
+    SolarMutexGuard aVclGuard;
     mpWindow    = pWindow;
     mpData      = const_cast<void*>(pEvent);
     mnEventType  = nEventType;
